kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/sum.k
pub type Sum(L: Type, R: Type) {
    inl(L: Type, l: L, R: Type): Sum(L, R),
    inr(L: Type, R: Type, r: Type): Sum(L, R),
}
