kanc/src/tests/sample_code/should_fail/single_file/variant_return_type/param.k
type U {
    .u: U,
}

type Foo {
    .bar(a: U): a,
}
